[tool.poetry]
name = "litestar-htmx"
version = "0.1.0"
description = ""
authors = ["Viet Than <thanhoangviet@gmail.com>"]
readme = "README.md"
packages = [{include = "litestar_htmx"}]

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^2.0.0rc1"
click = "^8.1.6"
rich = "^13.5.2"
structlog = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
